--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -18,25 +18,25 @@
 
                   <th>
 
-                        @Html.DisplayNameFor(model  => model.Id);
+                        @Html.DisplayNameFor(model  => model.Id)
 
                   </th>
 
                   <th>
 
-                        @Html.DisplayNameFor(model  => model.Nome);
+                        @Html.DisplayNameFor(model  => model.Nome)
 
                   </th>
 
                   <th>
 
-                        @Html.DisplayNameFor(model  => model.Telefone);
+                        @Html.DisplayNameFor(model  => model.Telefone)
 
                   </th>
 
                   <th>
 
-                        @Html.DisplayNameFor(model  => model.Ativo);
+                        @Html.DisplayNameFor(model  => model.Ativo)
 
                   </th>
 
