--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -81,9 +81,9 @@
 
                           <td>
 
-                                <a asp-action = "Editar" asp-route-id = "item.Id">Editar</a> |
-                                 <a asp-action = "Detalhes" asp-route-id = "item.Id">Detalhes</a> |
-                                  <a asp-action = "Deletar" asp-route-id = "item.Id">Deletar</a> 
+                                <a asp-action = "Editar" asp-route-id = "@item.Id">Editar</a> |
+                                 <a asp-action = "Detalhes" asp-route-id = "@item.Id">Detalhes</a> |
+                                  <a asp-action = "Deletar" asp-route-id = "@item.Id">Deletar</a> 
 
                           </td>
 
